Add form to index.html, set form to send users to Wikipedia depending on selection.

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
   <body>
     <h1>Pick an animal to learn about it!</h1>
 
-    <form>
+    <form id="formMain">
       <select class="form-control" id="animalsForm">
       <option value="turtles">Turtles</option>
       <option value="snakes">Snakes</option>
       <option value="insects">Insects</option>
       </select>
 
-      <p><button type="submit" class="btn">Submit</button></p>
+      <p><button type="submit" class="btn btn-success">Submit</button></p>
     </form>
-
   </body>
 </html>
